babel, i18n extract plugin

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,5 @@
 {
-  "Test example": "Test example",
-  "Translate": "Translate",
   "About": "About",
-  "Main": "Main",
-  "Language": "Latviski"
+  "Language": "Latviski",
+  "Main": "Main"
 }
