--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,7 +1,5 @@
 {
-  "Test example": "Testa piemērs",
-  "Translate": "Tulkojums",
   "About": "Par mums",
-  "Main": "Sākums",
-  "Language": "English"
+  "Language": "English",
+  "Main": "Sākums"
 }
