not found page, page loader

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,5 +1,6 @@
 {
   "About": "Par mums",
   "Language": "English",
-  "Main": "Sākums"
+  "Main": "Sākums",
+  "Page not found": "Lapa nav atrasta"
 }
