--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -2,5 +2,7 @@
   "About": "Par mums",
   "Language": "English",
   "Main": "Sākums",
-  "Page not found": "Lapa nav atrasta"
+  "Page not found": "Lapa nav atrasta",
+  "Reload page": "Reload page",
+  "Something went wrong": "Ir noticis kaut kas neparedzēts"
 }
