--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,7 @@
   "About": "About",
   "Language": "Latviski",
   "Main": "Main",
-  "Page not found": "Page not found"
+  "Page not found": "Page not found",
+  "Reload page": "Reload page",
+  "Something went wrong": "Something went wrong"
 }
