fix eslint errors

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -4,5 +4,6 @@
   "Main": "Sākums",
   "Page not found": "Lapa nav atrasta",
   "Reload page": "Reload page",
-  "Something went wrong": "Ir noticis kaut kas neparedzēts"
+  "Something went wrong": "Ir noticis kaut kas neparedzēts",
+  "Toggle": "Pārslēgt"
 }
