--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "Main": "Main",
   "Page not found": "Page not found",
   "Reload page": "Reload page",
-  "Something went wrong": "Something went wrong"
+  "Something went wrong": "Something went wrong",
+  "Toggle": "Toggle"
 }
