sidebar upgrade, new button themes

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,9 +1,10 @@
 {
+  "Abou": "Abou",
   "About": "Par mums",
   "Language": "English",
+  "Language Code": "EN",
   "Main": "Sākums",
   "Page not found": "Lapa nav atrasta",
   "Reload page": "Reload page",
-  "Something went wrong": "Ir noticis kaut kas neparedzēts",
-  "Toggle": "Pārslēgt"
+  "Something went wrong": "Ir noticis kaut kas neparedzēts"
 }
