--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,9 +1,10 @@
 {
+  "Abou": "Abou",
   "About": "About",
   "Language": "Latviski",
+  "Language Code": "LV",
   "Main": "Main",
   "Page not found": "Page not found",
   "Reload page": "Reload page",
-  "Something went wrong": "Something went wrong",
-  "Toggle": "Toggle"
+  "Something went wrong": "Something went wrong"
 }
