add modal, portal, dark mode change, navbar change

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -3,6 +3,7 @@
   "About": "Par mums",
   "Language": "English",
   "Language Code": "EN",
+  "Login": "Login",
   "Main": "Sākums",
   "Page not found": "Lapa nav atrasta",
   "Reload page": "Reload page",
