--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,6 +3,7 @@
   "About": "About",
   "Language": "Latviski",
   "Language Code": "LV",
+  "Login": "Login",
   "Main": "Main",
   "Page not found": "Page not found",
   "Reload page": "Reload page",
