fix ts, redux store, first entity

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,9 +1,13 @@
 {
-  "Abou": "Abou",
   "About": "About",
   "Language": "Latviski",
   "Language Code": "LV",
   "Login": "Login",
+  "Lorem ipsum dolor sit amet, consectetur adipisicing elit": {
+    " Atque delectus distinctio eaque eius exercitationem laudantium perspiciatis quibusdam saepe sapiente veritatis": {
+      "": ""
+    }
+  },
   "Main": "Main",
   "Page not found": "Page not found",
   "Reload page": "Reload page",
