--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,9 +1,13 @@
 {
-  "Abou": "Abou",
   "About": "Par mums",
   "Language": "English",
   "Language Code": "EN",
   "Login": "Login",
+  "Lorem ipsum dolor sit amet, consectetur adipisicing elit": {
+    " Atque delectus distinctio eaque eius exercitationem laudantium perspiciatis quibusdam saepe sapiente veritatis": {
+      "": ""
+    }
+  },
   "Main": "Sākums",
   "Page not found": "Lapa nav atrasta",
   "Reload page": "Reload page",
