--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -2,12 +2,7 @@
   "About": "Par mums",
   "Language": "English",
   "Language Code": "EN",
-  "Login": "Login",
-  "Lorem ipsum dolor sit amet, consectetur adipisicing elit": {
-    " Atque delectus distinctio eaque eius exercitationem laudantium perspiciatis quibusdam saepe sapiente veritatis": {
-      "": ""
-    }
-  },
+  "Login": "Pieteikties",
   "Main": "Sākums",
   "Page not found": "Lapa nav atrasta",
   "Reload page": "Reload page",
