new input, login form ui

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -6,5 +6,8 @@
   "Main": "Sākums",
   "Page not found": "Lapa nav atrasta",
   "Reload page": "Reload page",
-  "Something went wrong": "Ir noticis kaut kas neparedzēts"
+  "Something went wrong": "Ir noticis kaut kas neparedzēts",
+  "Type Password": "Ievadiet Paroli",
+  "Type Username": "Ievadiet Lietotājvārdu",
+  "Username": "Username"
 }
