--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,8 @@
   "Main": "Main",
   "Page not found": "Page not found",
   "Reload page": "Reload page",
-  "Something went wrong": "Something went wrong"
+  "Something went wrong": "Something went wrong",
+  "Type Password": "Type Password",
+  "Type Username": "Type Username",
+  "Username": "Username"
 }
