--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,6 +8,5 @@
   "Reload page": "Reload page",
   "Something went wrong": "Something went wrong",
   "Type Password": "Type Password",
-  "Type Username": "Type Username",
-  "Username": "Username"
+  "Type Username": "Type Username"
 }
