--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -8,6 +8,5 @@
   "Reload page": "Reload page",
   "Something went wrong": "Ir noticis kaut kas neparedzēts",
   "Type Password": "Ievadiet Paroli",
-  "Type Username": "Ievadiet Lietotājvārdu",
-  "Username": "Username"
+  "Type Username": "Ievadiet Lietotājvārdu"
 }
