add login module

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,8 +1,10 @@
 {
   "About": "Par mums",
+  "Authorization form": "Autorizācijas forma",
   "Language": "English",
   "Language Code": "EN",
   "Login": "Pieteikties",
+  "Logout": "Atteikties",
   "Main": "Sākums",
   "Page not found": "Lapa nav atrasta",
   "Reload page": "Reload page",
