--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,8 +1,10 @@
 {
   "About": "About",
+  "Authorization form": "Authorization form",
   "Language": "Latviski",
   "Language Code": "LV",
   "Login": "Login",
+  "Logout": "Logout",
   "Main": "Main",
   "Page not found": "Page not found",
   "Reload page": "Reload page",
