--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "About": "About",
   "Authorization form": "Authorization form",
+  "Invalid username or password": "Invalid username or password",
   "Language": "Latviski",
   "Language Code": "LV",
   "Login": "Login",
@@ -10,5 +11,7 @@
   "Reload page": "Reload page",
   "Something went wrong": "Something went wrong",
   "Type Password": "Type Password",
-  "Type Username": "Type Username"
+  "Type Username": "Type Username",
+  "Profile": "Profile",
+  "ProfilePage": "ProfilePage"
 }
