--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,7 @@
   "Type Password": "Type Password",
   "Type Username": "Type Username",
   "Profile": "Profile",
-  "ProfilePage": "ProfilePage"
+  "ProfilePage": "ProfilePage",
+  "Select currency": "Select currency",
+  "Select country": "Select country"
 }
