--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -12,5 +12,7 @@
   "Something went wrong": "Ir noticis kaut kas neparedzēts",
   "Type Password": "Ievadiet Paroli",
   "Type Username": "Ievadiet Lietotājvārdu",
-  "Profile": "Profils"
+  "Profile": "Profils",
+  "Select currency": "Select currency",
+  "Select country": "Select country"
 }
