article entity, skeleton

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "About": "About",
   "Authorization form": "Authorization form",
+  "Articles": "Articles",
   "Invalid username or password": "Invalid username or password",
   "Language": "Latviski",
   "Language Code": "LV",
