--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,6 +1,7 @@
 {
   "About": "Par mums",
   "Authorization form": "Autorizācijas forma",
+  "Articles": "Raksti",
   "Invalid username or password": "Invalid username or password",
   "Language": "English",
   "Language Code": "EN",
