--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
   "Profile": "Profile",
   "ProfilePage": "ProfilePage",
   "Select currency": "Select currency",
-  "Select country": "Select country"
+  "Select country": "Select country",
+  "No comments": "No comments"
 }
