--- a/public/locales/lv/article-details.json
+++ b/public/locales/lv/article-details.json
@@ -1,4 +1,6 @@
 {
   "Article not found": "Raksts nav atrasts",
-  "Something went wrong while loading article": "Something went wrong while loading article"
+  "Something went wrong while loading article": "Something went wrong while loading article",
+  "Comment": "Comment",
+  "Comments": "Comments"
 }
