--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -15,5 +15,6 @@
   "Type Username": "Ievadiet Lietotājvārdu",
   "Profile": "Profils",
   "Select currency": "Select currency",
-  "Select country": "Select country"
+  "Select country": "Select country",
+  "No comments": "No comments"
 }
