add comment form, user profiles

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -16,5 +16,7 @@
   "Profile": "Profils",
   "Select currency": "Select currency",
   "Select country": "Select country",
-  "No comments": "No comments"
+  "No comments": "No comments",
+  "Add a comment": "Add a comment",
+  "Send": "Send"
 }
