--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,7 @@
   "ProfilePage": "ProfilePage",
   "Select currency": "Select currency",
   "Select country": "Select country",
-  "No comments": "No comments"
+  "No comments": "No comments",
+  "Add a comment": "Add a comment",
+  "Send": "Send"
 }
