--- a/public/locales/lv/article-details.json
+++ b/public/locales/lv/article-details.json
@@ -2,5 +2,6 @@
   "Article not found": "Raksts nav atrasts",
   "Something went wrong while loading article": "Something went wrong while loading article",
   "Comment": "Comment",
-  "Comments": "Comments"
+  "Comments": "Comments",
+  "Back to list": "Back to list"
 }
