--- a/public/locales/lv/articles.json
+++ b/public/locales/lv/articles.json
@@ -1,3 +1,9 @@
 {
-
+  "Sort BY": "Sort BY",
+  "Search": "Search",
+  "ALL": "ALL",
+  "IT": "IT",
+  "ECONOMICS": "ECONOMICS",
+  "SCIENCE": "SCIENCE",
+  "Articles not found": "Articles not found"
 }
