add recommendations for each article, combine reducers

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -3,5 +3,6 @@
   "Something went wrong while loading article": "Something went wrong while loading article",
   "Comment": "Comment",
   "Comments": "Comments",
-  "Back to list": "Back to list"
+  "Back to list": "Back to list",
+  "Recommendations": "Recommendations"
 }
