--- a/public/locales/en/articles.json
+++ b/public/locales/en/articles.json
@@ -5,5 +5,7 @@
   "IT": "IT",
   "ECONOMICS": "ECONOMICS",
   "SCIENCE": "SCIENCE",
-  "Articles not found": "Articles not found"
+  "Articles not found": "Articles not found",
+  "Editing article with ID = ": "Editing article with ID = ",
+  "Create new article": "Create new article"
 }
