--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,5 +26,6 @@
   "Ascending": "Ascending",
   "Descending": "Descending",
   "Sort BY": "Sort BY",
-  "Order": "Order"
+  "Order": "Order",
+  "Create article": "Create article"
 }
