--- a/public/locales/lv/article-details.json
+++ b/public/locales/lv/article-details.json
@@ -4,5 +4,6 @@
   "Comment": "Comment",
   "Comments": "Comments",
   "Back to list": "Back to list",
-  "Recommendations": "Recommendations"
+  "Recommendations": "Recommendations",
+  "Edit": "Edit"
 }
