--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -25,5 +25,6 @@
   "Ascending": "Ascending",
   "Descending": "Descending",
   "Sort BY": "Sort BY",
-  "Order": "Order"
+  "Order": "Order",
+  "Create article": "Create article"
 }
