--- a/public/locales/lv/profile.json
+++ b/public/locales/lv/profile.json
@@ -1,19 +1,20 @@
 {
-    "Profile": "Profils",
-    "Edit": "Rediģēt",
-    "Your name": "Your name",
-    "Your lastname": "Your lastname",
-    "Something went wrong while loading Profile": "Something went wrong while loading Profile",
-    "Try again later": "Try again later",
-    "Cancel": "Cancel",
-    "Save": "Save",
-    "Your city": "Your city",
-    "Your age": "Your age",
-    "Type Username": "Type Username",
-    "Avatar link": "Avatar link",
-    "Server error while saving": "Server error while saving",
-    "Data is not specified": "Data is not specified",
-    "Firstname and lastname is required": "Firstname and lastname is required",
-    "Incorrect country": "Incorrect country",
-    "Incorrect age": "Incorrect age"
+  "Profile": "Profils",
+  "Edit": "Rediģēt",
+  "Your name": "Your name",
+  "Your lastname": "Your lastname",
+  "Something went wrong while loading Profile": "Something went wrong while loading Profile",
+  "Try again later": "Try again later",
+  "Cancel": "Cancel",
+  "Save": "Save",
+  "Your city": "Your city",
+  "Your age": "Your age",
+  "Type Username": "Type Username",
+  "Avatar link": "Avatar link",
+  "Server error while saving": "Server error while saving",
+  "Data is not specified": "Data is not specified",
+  "Firstname and lastname is required": "Firstname and lastname is required",
+  "Incorrect country": "Incorrect country",
+  "Incorrect age": "Incorrect age",
+  "Profile not found": "Profile not found"
 }
