add role based routing

--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -27,5 +27,7 @@
   "Sort BY": "Sort BY",
   "Order": "Order",
   "Create article": "Create article",
-  "User profile": "User profile"
+  "User profile": "User profile",
+  "Admin": "Admin",
+  "You don't have access to this page!": "You don't have access to this page!"
 }
