--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,5 +28,7 @@
   "Sort BY": "Sort BY",
   "Order": "Order",
   "Create article": "Create article",
-  "User profile": "User profile"
+  "User profile": "User profile",
+  "Admin": "Admin",
+  "You don't have access to this page!": "You don't have access to this page!"
 }
