--- a/public/locales/lv/articles.json
+++ b/public/locales/lv/articles.json
@@ -8,5 +8,6 @@
   "Articles not found": "Articles not found",
   "Editing article with ID = ": "Editing article with ID = ",
   "Create new article": "Create new article",
-  "Loadin articles failed": "Loadin articles failed"
+  "Loadin articles failed": "Loadin articles failed",
+  "Loading articles failed": "Loading articles failed"
 }
