congig babel loader for ts, add fork ts checker, custom babel plugin to remove data-testid attributes from build

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -1,9 +1,8 @@
 {
-    "Article not found": "Article not found",
-    "Something went wrong while loading article": "Something went wrong while loading article",
-    "Comment": "Comment",
-    "Comments": "Comments",
-    "Back to list": "Back to list",
-    "Recommendations": "Recommendations",
-    "Edit": "Edit"
+  "Article not found": "Article not found",
+  "Back to list": "Back to list",
+  "Comments": "Comments",
+  "Edit": "Edit",
+  "Recommendations": "Recommendations",
+  "Something went wrong while loading article": "Something went wrong while loading article"
 }
