--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,20 +1,20 @@
 {
-  "Profile": "Profile",
+  "Avatar link": "Avatar link",
+  "Cancel": "Cancel",
+  "Data is not specified": "Data is not specified",
   "Edit": "Edit",
-  "Your name": "Your name",
-  "Your lastname": "Your lastname",
+  "Firstname and lastname is required": "Firstname and lastname is required",
+  "Incorrect age": "Incorrect age",
+  "Incorrect country": "Incorrect country",
+  "Profile": "Profile",
+  "Profile not found": "Profile not found",
+  "Save": "Save",
+  "Server error while saving": "Server error while saving",
   "Something went wrong while loading Profile": "Something went wrong while loading Profile",
   "Try again later": "Try again later",
-  "Cancel": "Cancel",
-  "Save": "Save",
-  "Your city": "Your city",
-  "Your age": "Your age",
   "Type Username": "Type Username",
-  "Avatar link": "Avatar link",
-  "Server error while saving": "Server error while saving",
-  "Data is not specified": "Data is not specified",
-  "Firstname and lastname is required": "Firstname and lastname is required",
-  "Incorrect country": "Incorrect country",
-  "Incorrect age": "Incorrect age",
-  "Profile not found": "Profile not found"
+  "Your age": "Your age",
+  "Your city": "Your city",
+  "Your lastname": "Your lastname",
+  "Your name": "Your name"
 }
