--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,34 +1,36 @@
 {
-  "About": "About",
+  "Add a comment": "Add a comment",
+  "Admin": "Admin",
+  "Ascending": "Ascending",
   "Authorization form": "Authorization form",
-  "Articles": "Articles",
+  "Create article": "Create article",
+  "Date created": "Date created",
+  "Descending": "Descending",
   "Invalid username or password": "Invalid username or password",
   "Language": "Latviski",
   "Language Code": "LV",
   "Login": "Login",
   "Logout": "Logout",
-  "Main": "Main",
+  "No comments": "No comments",
+  "Order": "Order",
   "Page not found": "Page not found",
+  "Profile": "Profile",
+  "Read more": {
+    "": {
+      "": {
+        "": ""
+      }
+    }
+  },
   "Reload page": "Reload page",
+  "Select country": "Select country",
+  "Select currency": "Select currency",
+  "Send": "Send",
   "Something went wrong": "Something went wrong",
+  "Sort BY": "Sort BY",
+  "Title": "Title",
   "Type Password": "Type Password",
   "Type Username": "Type Username",
-  "Profile": "Profile",
-  "ProfilePage": "ProfilePage",
-  "Select currency": "Select currency",
-  "Select country": "Select country",
-  "No comments": "No comments",
-  "Add a comment": "Add a comment",
-  "Send": "Send",
-  "Date created": "Date created",
-  "Title": "Title",
   "Views": "Views",
-  "Ascending": "Ascending",
-  "Descending": "Descending",
-  "Sort BY": "Sort BY",
-  "Order": "Order",
-  "Create article": "Create article",
-  "User profile": "User profile",
-  "Admin": "Admin",
   "You don't have access to this page!": "You don't have access to this page!"
 }
