--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,33 +1,36 @@
 {
-  "About": "Par mums",
+  "Add a comment": "Add a comment",
+  "Admin": "Admin",
+  "Ascending": "Ascending",
   "Authorization form": "Autorizācijas forma",
-  "Articles": "Raksti",
+  "Create article": "Create article",
+  "Date created": "Date created",
+  "Descending": "Descending",
   "Invalid username or password": "Invalid username or password",
   "Language": "English",
   "Language Code": "EN",
   "Login": "Pieteikties",
   "Logout": "Atteikties",
-  "Main": "Sākums",
+  "No comments": "No comments",
+  "Order": "Order",
   "Page not found": "Lapa nav atrasta",
+  "Profile": "Profils",
+  "Read more": {
+    "": {
+      "": {
+        "": ""
+      }
+    }
+  },
   "Reload page": "Reload page",
+  "Select country": "Select country",
+  "Select currency": "Select currency",
+  "Send": "Send",
   "Something went wrong": "Ir noticis kaut kas neparedzēts",
+  "Sort BY": "Sort BY",
+  "Title": "Title",
   "Type Password": "Ievadiet Paroli",
   "Type Username": "Ievadiet Lietotājvārdu",
-  "Profile": "Profils",
-  "Select currency": "Select currency",
-  "Select country": "Select country",
-  "No comments": "No comments",
-  "Add a comment": "Add a comment",
-  "Send": "Send",
-  "Date created": "Date created",
-  "Title": "Title",
   "Views": "Views",
-  "Ascending": "Ascending",
-  "Descending": "Descending",
-  "Sort BY": "Sort BY",
-  "Order": "Order",
-  "Create article": "Create article",
-  "User profile": "User profile",
-  "Admin": "Admin",
   "You don't have access to this page!": "You don't have access to this page!"
 }
