--- a/public/locales/lv/articles.json
+++ b/public/locales/lv/articles.json
@@ -1,13 +1,11 @@
 {
-  "Sort BY": "Sort BY",
-  "Search": "Search",
   "ALL": "ALL",
-  "IT": "IT",
-  "ECONOMICS": "ECONOMICS",
-  "SCIENCE": "SCIENCE",
   "Articles not found": "Articles not found",
-  "Editing article with ID = ": "Editing article with ID = ",
   "Create new article": "Create new article",
-  "Loadin articles failed": "Loadin articles failed",
-  "Loading articles failed": "Loading articles failed"
+  "ECONOMICS": "ECONOMICS",
+  "Editing article with ID = ": "Editing article with ID = ",
+  "IT": "IT",
+  "Loading articles failed": "Loading articles failed",
+  "SCIENCE": "SCIENCE",
+  "Search": "Search"
 }
