--- a/public/locales/lv/main.json
+++ b/public/locales/lv/main.json
@@ -1,3 +1,5 @@
 {
-  "Main page": "Sākumlapas informācija"
+  "Leave a feedback about article": "Leave a feedback about article",
+  "Main page": "Sākumlapas informācija",
+  "Please, rate this article!": "Please, rate this article!"
 }
