--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -3,6 +3,7 @@
   "Admin": "Admin",
   "Ascending": "Ascending",
   "Authorization form": "Autorizācijas forma",
+  "Close": "Close",
   "Create article": "Create article",
   "Date created": "Date created",
   "Descending": "Descending",
@@ -32,5 +33,6 @@
   "Type Password": "Ievadiet Paroli",
   "Type Username": "Ievadiet Lietotājvārdu",
   "Views": "Views",
-  "You don't have access to this page!": "You don't have access to this page!"
+  "You don't have access to this page!": "You don't have access to this page!",
+  "Your review": "Your review"
 }
