add article rating

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -3,6 +3,9 @@
   "Back to list": "Back to list",
   "Comments": "Comments",
   "Edit": "Edit",
+  "Leave a feedback about article": "Leave a feedback about article",
+  "Please, rate this article!": "Please, rate this article!",
   "Recommendations": "Recommendations",
-  "Something went wrong while loading article": "Something went wrong while loading article"
+  "Something went wrong while loading article": "Something went wrong while loading article",
+  "Thank you for rating!": "Thank you for rating!"
 }
