--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -1,5 +1,3 @@
 {
-  "Leave a feedback about article": "Leave a feedback about article",
-  "Main page": "Main page",
-  "Please, rate this article!": "Please, rate this article!"
+  "Main page": "Main page"
 }
