--- a/public/locales/lv/main.json
+++ b/public/locales/lv/main.json
@@ -1,5 +1,3 @@
 {
-  "Leave a feedback about article": "Leave a feedback about article",
-  "Main page": "Sākumlapas informācija",
-  "Please, rate this article!": "Please, rate this article!"
+  "Main page": "Sākumlapas informācija"
 }
