add toggle flags and auto remove script

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -7,5 +7,6 @@
   "Please, rate this article!": "Please, rate this article!",
   "Recommendations": "Recommendations",
   "Something went wrong while loading article": "Something went wrong while loading article",
-  "Thank you for rating!": "Thank you for rating!"
+  "Thank you for rating!": "Thank you for rating!",
+  "Article rating will be developed soon!": "Article rating will be developed soon!"
 }
